getTours Parameter min/max Time changed to min/max Duration
